# claude-slash

./: .github-init.example.yaml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  demo.tape  example-usage.md  feature.py  github_init.py  github_init_command.py  install.sh  package.json  pyproject.toml  pytest.ini  register_command.py  requirements-test.txt  test_config.py  test_fast.py  test_github_init_command.py  test_integration_fast.py  test_interactive.py  test_rich_ui.py
.claude/commands/: boot.md  bootstrap.md  bs.md  checkpoint.md  ckpt.md  cr-bootstrap.md  cr-upgrade.md  example.md  github-init.md  github_init.py  learn.md  mcfg.md  menuconfig.md  pm-init.md  project-setup.md  restore.md  rst.md  slash.md  up.md  update.md  workflow-create.md
.claude/scripts/: claude_menuconfig.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-version.yml  automerge.yml  ci.yml  claude-code-review.yml  claude-dispatch.yml  issue-management.yml  release.yml  test.yml
claude-commands/.claude/commands/: bookmark.md  bookmark.py
docs/: CONTRIBUTING.md
scripts/: bump-version.sh  release.sh
src/claude_slash/: __init__.py  __main__.py  main.py
src/claude_slash/commands/: __init__.py  base.py  example.py  github_init.py  learn.py  menuconfig.py  slash.py
src/claude_slash/ui/: __init__.py  console.py  formatting.py  progress.py
tests/: __init__.py  conftest.py  test_cli_command_sync.py  test_commands.sh  test_main.py  test_slash_command.py  test_update.sh
