[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-slash"
version = "1.6.0"
description = "Python CLI tool for enhanced development workflows with Rich terminal UI and interactive commands"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jeremy Eder", email = "jeremyeder@users.noreply.github.com" }
]
keywords = [
    "cli",
    "python",
    "development",
    "workflow",
    "tools",
    "rich",
    "terminal-ui",
    "interactive"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Environment :: Console",
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-subprocess>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jeremyeder/claude-slash"
Repository = "https://github.com/jeremyeder/claude-slash.git"
Issues = "https://github.com/jeremyeder/claude-slash/issues"

[project.scripts]
claude-slash = "claude_slash.main:app"

[tool.hatch.version]
path = "src/claude_slash/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_slash"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=claude_slash"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest-subprocess>=1.5.3",
]
